--- a/polemon/Cargo.toml
+++ b/polemon/Cargo.toml
@@ -3,6 +3,12 @@ name = "polemon"
 version = "0.1.0"
 edition = "2021"
 
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
+[profile.dev]
+opt.level = 1
+
+[profile.dev.package."*"]
+opt.level = 3
 
 [dependencies]
+bevy = {version = "0.7", features = ["dynamic"]}
+bevy-inspector-egui = "0.11"
