--- a/chippy_crab/Cargo.toml
+++ b/chippy_crab/Cargo.toml
@@ -4,7 +4,7 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
-bevy = {version = "0.7", features = ["dynamic"]}
+bevy = "0.7"
 bevy_rapier2d = { version = "*", features = [ "simd-stable", "debug-render" ] }
 rand = "0.8"
 
