--- a/crossing_river/Cargo.toml
+++ b/crossing_river/Cargo.toml
@@ -11,4 +11,5 @@ opt-level = 1
 opt-level = 3
 
 [dependencies]
-bevy = "0.11"
+bevy = { verison = "0.11", features = ["dynamic_linking"] }
+bevy-inspector-egui = "0.19"
