--- a/ldtk_game/Cargo.toml
+++ b/ldtk_game/Cargo.toml
@@ -8,7 +8,9 @@ edition = "2021"
 [dependencies]
 bevy = { version = "0.14", features = ["dynamic_linking"] }
 bevy-inspector-egui = "0.25.2"
+bevy-inspector-egui-derive = "=0.25.1"
 bevy_ecs_ldtk = "0.10.0"
+avian2d = "0.1"
 
 # Enable a small amount of optimization in the dev profile.
 [profile.dev]
@@ -17,4 +19,3 @@ opt-level = 1
 # Enable a large amount of optimization in the dev profile for dependencies.
 [profile.dev.package."*"]
 opt-level = 3
-
