--- a/ldtk_game/Cargo.toml
+++ b/ldtk_game/Cargo.toml
@@ -11,6 +11,7 @@ bevy-inspector-egui = "0.25.2"
 bevy-inspector-egui-derive = "=0.25.1"
 bevy_ecs_ldtk = "0.10.0"
 avian2d = "0.1"
+bevy_light_2d = "0.3.0"
 
 # Enable a small amount of optimization in the dev profile.
 [profile.dev]
