--- a/ldtk_game/Cargo.toml
+++ b/ldtk_game/Cargo.toml
@@ -12,6 +12,7 @@ bevy-inspector-egui-derive = "=0.25.1"
 bevy_ecs_ldtk = "0.10.0"
 avian2d = "0.1"
 bevy_light_2d = "0.3.0"
+bevy_mod_picking = "0.20.1"
 
 # Enable a small amount of optimization in the dev profile.
 [profile.dev]
