--- a/ldtk_game/Cargo.toml
+++ b/ldtk_game/Cargo.toml
@@ -13,6 +13,7 @@ bevy_ecs_ldtk = "0.10.0"
 avian2d = "0.1"
 bevy_light_2d = "0.3.0"
 bevy_mod_picking = "0.20.1"
+leafwing-input-manager = "0.15.0"
 
 # Enable a small amount of optimization in the dev profile.
 [profile.dev]
